fixed some layout issues, removed images

--- a/myproject/public/styles/style.css
+++ b/myproject/public/styles/style.css
@@ -309,7 +309,7 @@ section{
 
 .image{
   width: 100%;
-  height: 300px;
+  height: 100%;
   object-fit: cover;
 }
 
